snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.md5
9df1eb74e323b123a693c3e61f5c1ef9